--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,700&display=swap');
 
 body {
+  margin: 0;
+  padding: 0;
+  display: block;
   background-color: rgb(194, 194, 194);
 
   font-family: 'Poppins', sans-serif;
